[gd_scene load_steps=18 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://fondo.png" type="Texture" id=2]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Player/Idle0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Jump1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Run0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Run2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Run4.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Run3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Run7.png" type="Texture" id=11]
[ext_resource path="res://KinematicBody2D2.gd" type="Script" id=12]
[ext_resource path="res://jungleDirtTileSet.tres" type="TileSet" id=13]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 28 )

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="Fondo" type="AnimatedSprite" parent="."]
position = Vector2( 631.21, 343.353 )
scale = Vector2( 2.46154, 2.63529 )
frames = SubResource( 1 )

[node name="Character" type="Node" parent="."]

[node name="player" type="KinematicBody2D" parent="Character" groups=[
"jugador",
]]
editor/display_folded = true
modulate = Color( 0.882353, 0.0980392, 0.0980392, 1 )
position = Vector2( 800, 146.827 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Character/player"]
position = Vector2( 0.88, 0.4 )
frames = SubResource( 2 )
animation = "death"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/player"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="pos_bala" type="Position2D" parent="Character/player"]
position = Vector2( 32, 0 )

[node name="player2" type="KinematicBody2D" parent="Character" groups=[
"jugador",
]]
editor/display_folded = true
position = Vector2( 179.427, 130.395 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Character/player2"]
modulate = Color( 0.2, 0.0352941, 0.658824, 1 )
position = Vector2( 0.88, 0.4 )
frames = SubResource( 2 )
animation = "death"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/player2"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="pos_bala" type="Position2D" parent="Character/player2"]
position = Vector2( 32, 0 )

[node name="Arena" type="TileMap" parent="."]
tile_set = ExtResource( 13 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65535, 5, 0, 40, 3, 0, 131071, 5, 0, 65576, 3, 0, 196607, 5, 0, 131112, 3, 0, 262143, 5, 0, 196648, 3, 0, 327679, 5, 0, 262184, 3, 0, 393215, 5, 0, 327720, 3, 0, 458751, 5, 0, 393256, 3, 0, 524287, 5, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 458792, 3, 0, 589823, 5, 0, 524328, 3, 0, 655359, 5, 0, 589864, 3, 0, 720895, 5, 0, 655400, 3, 0, 786431, 5, 0, 720936, 3, 0, 851967, 5, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786472, 3, 0, 917503, 5, 0, 852008, 3, 0, 983039, 5, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 917536, 1, 0, 917537, 1, 0, 917538, 1, 0, 917539, 1, 0, 917540, 1, 0, 917541, 1, 0, 917542, 1, 0, 917543, 1, 0, 917544, 3, 0, 1048575, 5, 0, 983080, 3, 0, 1114111, 5, 0, 1048616, 3, 0, 1179647, 5, 0, 1114152, 3, 0, 1245183, 5, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0, 1179680, 1, 0, 1179681, 1, 0, 1179682, 1, 0, 1179683, 1, 0, 1179688, 3, 0, 1310719, 5, 0, 1245224, 3, 0, 1376255, 5, 0, 1310760, 3, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1376268, 1, 0, 1376269, 1, 0, 1376270, 1, 0, 1376271, 1, 0, 1376272, 1, 0, 1376273, 1, 0, 1376274, 1, 0, 1376275, 1, 0, 1376276, 1, 0, 1376277, 1, 0, 1376278, 1, 0, 1376279, 1, 0, 1376280, 1, 0, 1376281, 1, 0, 1376282, 1, 0, 1376283, 1, 0, 1376284, 1, 0, 1376285, 1, 0, 1376286, 1, 0, 1376287, 1, 0, 1376288, 1, 0, 1376289, 1, 0, 1376290, 1, 0, 1376291, 1, 0, 1376292, 1, 0, 1376293, 1, 0, 1376294, 1, 0, 1376295, 1, 0, 1441792, 4, 0, 1441793, 4, 0, 1441794, 4, 0, 1441795, 4, 0, 1441796, 4, 0, 1441797, 4, 0, 1441798, 4, 0, 1441799, 4, 0, 1441800, 4, 0, 1441801, 4, 0, 1441802, 4, 0, 1441803, 4, 0, 1441804, 4, 0, 1441805, 4, 0, 1441806, 4, 0, 1441807, 4, 0, 1441808, 4, 0, 1441809, 4, 0, 1441810, 4, 0, 1441811, 4, 0, 1441812, 4, 0, 1441813, 4, 0, 1441814, 4, 0, 1441815, 4, 0, 1441816, 4, 0, 1441817, 4, 0, 1441818, 4, 0, 1441819, 4, 0, 1441820, 4, 0, 1441821, 4, 0, 1441822, 4, 0, 1441823, 4, 0, 1441824, 4, 0, 1441825, 4, 0, 1441826, 4, 0, 1441827, 4, 0, 1441828, 4, 0, 1441829, 4, 0, 1441830, 4, 0, 1441831, 4, 0 )

[node name="Audio_effects" type="Node2D" parent="."]
editor/display_folded = true

[node name="Arena_Sound" type="AudioStreamPlayer2D" parent="Audio_effects"]

[node name="Interfaz" parent="." instance=ExtResource( 14 )]

[node name="PosicionInicio" type="Position2D" parent="."]
position = Vector2( 800, 146.827 )

[node name="PosicionInicio2" type="Position2D" parent="."]
position = Vector2( 179.427, 130.395 )

[node name="Boxes" type="Node2D" parent="."]

[node name="Caja1" type="Position2D" parent="Boxes"]
position = Vector2( 619.957, 351.617 )

[node name="Caja2" type="Position2D" parent="Boxes"]
position = Vector2( 138.796, 385.226 )

[node name="Caja3" type="Position2D" parent="Boxes"]
position = Vector2( 1135.48, 401.03 )

[node name="Caja4" type="Position2D" parent="Boxes"]
position = Vector2( 67.1451, 626.591 )

[node name="Caja5" type="Position2D" parent="Boxes"]
position = Vector2( 1231.86, 616.338 )
[connection signal="game_over" from="Character/player" to="." method="game_over"]
[connection signal="game_over" from="Character/player2" to="." method="game_over"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="nuevo_juego"]
